HelloUltraviolet/Fixtures/RejectedSource/Statements/SyncStatementRecovery/Expected.uv
//! Expected diagnostic metadata for the SyncStatementRecovery rejected-source specimen.

expectedDiagnostic("E-SRC-0520", "def.18.SyncStmt")
